--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,13 @@
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>jLDMud</name>
+  <developers>
+    <developer>
+      <id>Mateese</id>
+      <name>Lars Duening</name>
+      <email>lars@bearnip.com</email>
+    </developer>
+  </developers>
   <build>
     <plugins>
        <plugin>
