Implemented the mud.properties parser - what it is lacking now are unit tests.
Reduced the property names in version.properties.

Updated the code styles a bit

--- a/src/main/resources/org/ldmud/jldmud/version.properties
+++ b/src/main/resources/org/ldmud/jldmud/version.properties
@@ -1,9 +1,9 @@
 # The various version identifiers
 
-ldmud.version.release.type=dev
-ldmud.version.release.longtype=development
-ldmud.version.release.date=2013-08-29
-ldmud.version=1.0.0
-ldmud.version.major=1
-ldmud.version.minor=0
-ldmud.version.micro=0
+version.release.type=dev
+version.release.longtype=development
+version.release.date=2013-08-29
+version=1.0.0
+version.major=1
+version.minor=0
+version.micro=0
