--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,12 @@
 			<email>lars@bearnip.com</email>
 		</developer>
 	</developers>
+	
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.build.sourceVersion>1.7</project.build.sourceVersion>
+	</properties>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -20,8 +26,9 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>${project.build.sourceVersion}</source>
+					<target>${project.build.sourceVersion}</target>
+					<encoding>${project.build.sourceEncoding}</encoding>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -36,7 +43,7 @@
 							<goal>copy-dependencies</goal>
 						</goals>
 						<configuration>
-							<excludeArtifactIds></excludeArtifactIds>
+							<excludeArtifactIds>testng,bsh,jcommander,snakeyaml,junit</excludeArtifactIds>
 							<outputDirectory>${project.build.directory}/lib</outputDirectory>
 							<overWriteReleases>false</overWriteReleases>
 							<overWriteSnapshots>false</overWriteSnapshots>
@@ -76,9 +83,9 @@
 			<version>2.6</version>
 		</dependency>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.1.1</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
