--- a/src/main/resources/org/ldmud/jldmud/version.properties
+++ b/src/main/resources/org/ldmud/jldmud/version.properties
@@ -7,3 +7,7 @@ version=1.0.0
 version.major=1
 version.minor=0
 version.micro=0
+
+# This information is unlikely to change, but if it does, it's in a simple location.
+version.copyright=Copyright (C) 2013 Lars Duening and Contributors ("jLDMud Developers")
+version.license=MIT License
