Tweaks: Changed the tabs to spaces in the pom.xml, since editors and terminals never agree on how wide a tab is.
Moved the LICENSE file to the top level of the jar, so that it's more
visible should people just unpack the jar.

The Version module can now take apart the full version string into its
constituting components. I may even have the version be inserted
automatically during the build based on the Maven artifact version.

--- a/src/main/resources/org/ldmud/jldmud/version.properties
+++ b/src/main/resources/org/ldmud/jldmud/version.properties
@@ -3,10 +3,9 @@
 version.release.type=dev
 version.release.longtype=development
 version.release.date=2013-08-29
-version=1.0.0
-version.major=1
-version.minor=0
-version.micro=0
+# TODO: Have the version filled in by Maven during the copy-dependencies phase from the artifact version
+# The version must be of the form '{major}.{minor}.{micro}-{tag}'. The {micro} and {tag} components are optional.
+version=1.0.0-SNAPSHOT
 
 # This information is unlikely to change, but if it does, it's in a simple location.
 version.copyright=Copyright (C) 2013 Lars Duening and Contributors ("jLDMud Developers")
