--- a/src/main/resources/org/ldmud/jldmud/version.properties
+++ b/src/main/resources/org/ldmud/jldmud/version.properties
@@ -7,6 +7,5 @@ version.release.date=2013-08-29
 # The version must be of the form '{major}.{minor}.{micro}-{tag}'. The {micro} and {tag} components are optional.
 version=1.0.0-SNAPSHOT
 
-# This information is unlikely to change, but if it does, it's in a simple location.
-version.copyright=Copyright (C) 2013 Lars Duening and Contributors ("jLDMud Developers")
+version.copyright=Copyright (C) 2013-2015 Lars Duening and Contributors ("jLDMud Developers")
 version.license=MIT License
