Implement first object data structures.
Implement basic object data structures.

--- a/src/test/resources/log4j2-test.properties
+++ b/src/test/resources/log4j2-test.properties
@@ -6,8 +6,8 @@
 # from a properties file, so the logging system must not be initialized before the configuration
 # has been fully read.
 
-property.driverlog = ${sys:mud.logdir.driver}/driver.log
-property.mudlog = ${sys:mud.logdir.game}/game.log
+property.driverlog = target/driver.log
+property.mudlog = target/game.log
 
 # Appenders
 
